name:                questioner
version:             0.1.0.0
synopsis:            A package for prompting values from the command-line.
homepage:            https://github.com/yamadapc/haskell-questioner.git
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           (c) 2014 Pedro Tacla Yamada
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Console.Questioner
  build-depends:       base >=4 && <5
                     , ansi-terminal >=0.6 && <0.7
                     , readline >=1 && <1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
