name:                questioner
version:             0.1.1.0
synopsis:            A package for prompting values from the command-line.
description:         This is still being developed
homepage:            https://github.com/yamadapc/haskell-questioner.git
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           (c) 2014 Pedro Tacla Yamada
category:            System
build-type:          Simple
cabal-version:       >=1.10

flag examples
  description: Build UI examples
  default: False

library
  exposed-modules:     System.Console.Questioner
                     , System.Console.Questioner.ProgressIndicators
                     , System.Console.Questioner.Util
  build-depends:       ansi-terminal >=0.6 && <0.7
                     , base >=4 && <5
                     , haskeline
                     , stm >= 2.4.4.1
                     , terminal-size >=0.2 && <1
                     , vty
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:  -threaded

executable questioner-list-prompt
  main-is:             ListPrompt.hs
  hs-source-dirs:      examples
  build-depends:       base
                     , vty
                     , questioner
  default-language:    Haskell2010
  ghc-options:  -threaded
  if flag(examples)
    buildable: True
  else
    buildable: False

executable questioner-checkbox-prompt
  main-is:             CheckboxPrompt.hs
  hs-source-dirs:      examples
  build-depends:       base
                     , vty
                     , questioner
  default-language:    Haskell2010
  ghc-options:  -threaded
  if flag(examples)
    buildable: True
  else
    buildable: False

executable questioner-spinner
  main-is:             Spinner.hs
  hs-source-dirs:      examples
  build-depends:       base
                     , vty
                     , questioner
  default-language:    Haskell2010
  ghc-options:  -threaded
  if flag(examples)
    buildable: True
  else
    buildable: False

executable questioner-progressbar
  main-is:             ProgressBar.hs
  hs-source-dirs:      examples
  build-depends:       base
                     , vty
                     , questioner
  default-language:    Haskell2010
  ghc-options:  -threaded
  if flag(examples)
    buildable: True
  else
    buildable: False
