name:                questioner
version:             0.1.1.0
synopsis:            A package for prompting values from the command-line.
description:         This is still being developed
homepage:            https://github.com/yamadapc/haskell-questioner.git
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           (c) 2014 Pedro Tacla Yamada
category:            System
build-type:          Simple
cabal-version:       >=1.10

flag examples
  description: Build UI examples
  default: False

library
  exposed-modules:     System.Console.Questioner
                     , System.Console.Questioner.ProgressIndicators
                     , System.Console.Questioner.Util
  build-depends:       ansi-terminal >=0.6 && <0.7
                     , base >=4 && <5
                     , haskeline
                     , stm
                     , vty
                     , terminal-size >=0.2 && <1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:  -threaded

executable questioner-list-prompt
  main-is:             ListPrompt.hs
  hs-source-dirs:      examples
  build-depends:       base
                     , questioner
  default-language:    Haskell2010
  ghc-options:  -threaded
  if flag(examples)
    buildable: True
  else
    buildable: False

executable questioner-checkbox-prompt
  main-is:             CheckboxPrompt.hs
  hs-source-dirs:      examples
  build-depends:       base
                     , questioner
  default-language:    Haskell2010
  ghc-options:  -threaded
  if flag(examples)
    buildable: True
  else
    buildable: False

executable questioner-spinner
  main-is:             Spinner.hs
  hs-source-dirs:      examples
  build-depends:       base
                     , questioner
  default-language:    Haskell2010
  ghc-options:  -threaded
  if flag(examples)
    buildable: True
  else
    buildable: False

executable questioner-progressbar
  main-is:             ProgressBar.hs
  hs-source-dirs:      examples
  build-depends:       base
                     , questioner
  default-language:    Haskell2010
  ghc-options:  -threaded
  if flag(examples)
    buildable: True
  else
    buildable: False

executable questioner-cabal-init
  main-is:             CabalInit.hs
  hs-source-dirs:      examples
  build-depends:       base
                     , directory >= 1.2.1.0
                     , filepath
                     , questioner
  default-language:    Haskell2010
  if flag(examples)
    buildable: True
  else
    buildable: False
